Bug 262384 - Fix build issue when !ENABLE(FILTERS_LEVEL_2)
Summary: Fix build issue when !ENABLE(FILTERS_LEVEL_2)
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Stephan Szabo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-09-29 11:17 PDT by Stephan Szabo
Modified: 2023-09-29 12:51 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stephan Szabo 2023-09-29 11:17:36 PDT
When building without ENABLE(FILTERS_LEVEL_2), a use of cssUnprefixedBackdropFilterEnabled which is controlled by that flag fails because the use appears not to also be controlled by it.
Comment 1 Stephan Szabo 2023-09-29 11:22:53 PDT
Pull request: https://github.com/WebKit/WebKit/pull/18421
Comment 2 EWS 2023-09-29 12:50:11 PDT
Committed 268665@main (c8ad412976d9): <https://commits.webkit.org/268665@main>

Reviewed commits have been landed. Closing PR #18421 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-09-29 12:51:14 PDT
<rdar://problem/116251332>