Fix build issue when !ENABLE(FILTERS_LEVEL_2) https://bugs.webkit.org/show_bug.cgi?id=262384

Unreviewed build fix

Add enable check around use of cssUnprefixedBackdropFilterEnabled

* Source/WebCore/rendering/RenderLayer.cpp:

Canonical link: https://commits.webkit.org/268665@main