Source/WebCore/rendering/RenderLayer.cpp
@@ -612,8 +612,10 @@ bool RenderLayer::shouldBeCSSStackingContext() const
 
 bool RenderLayer::computeCanBeBackdropRoot() const
 {
+#if ENABLE(FILTERS_LEVEL_2)
     if (!renderer().settings().cssUnprefixedBackdropFilterEnabled())
         return false;
+#endif
 
     return renderer().isTransparent()
         || renderer().hasBackdropFilter()
